# math-copilot

./: .gitignore  Makefile  README.md  index.html
backend/: README.md  pyproject.toml  requirements.txt
backend/math_copilot/: LLM.py  app.py  explanation.py  image_to_latex.py  linter.py  llm.py  mathpix.py  response.txt  split_latex_lines.py  utils.py
backend/notebooks/: ocr.ipynb
backend/tests/images/: zero_equals_one.json
backend/tests/images/test_math_copilot/: test_image_to_latex.py  test_split_latex_lines.py
backend/tests/test_math_copilot/: test_mathpix.py
frontend/: package.json
frontend/react-native/: package-lock.json  package.json
frontend/web_app/: index.html  script.js
frontend2/: App.js  app.json  package-lock.json  package.json
frontend3/: index.html  script.js
