[tool.poetry]
name = "math-copilot"
version = "0.1.0"
description = ""
authors = ["BenTenmann <benji.tenmann@me.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "math_copilot"}]

[tool.poetry.dependencies]
python = "^3.10"
gradio = "^3.32.0"
pytesseract = "^0.3.10"
sympy = "^1.12"
langchain = "^0.0.253"
openai = "^0.27.8"
python-dotenv = "^1.0.0"
latex2sympy2 = "^1.9.1"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.0"
black = {extras = ["jupyter"], version = "^23.7.0"}
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
